--- a/prow/test/integration/config/prow/cluster/sub.yaml
+++ b/prow/test/integration/config/prow/cluster/sub.yaml
@@ -24,26 +24,14 @@ spec:
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
         - --grace-period=110s
-        # This cookie file is only here to trigger the creation of a
-        # Gerrit-flavored Git client factory. So this makes this sub deployment
-        # "tied" to Gerrit.
-        #
-        # TODO (listx): Allow sub to be deployed with access to multiple
-        # GitHub/Gerrit credentials (and make it know which one to use based on
-        # the org/repo name). We can't simply deploy a 2nd sub deployment
-        # configured with GitHub creds to test that codepath because currently
-        # sub will always choose one or the other.
-        - --cookiefile=/etc/cookies/cookies
         - --dry-run=false
+        - --moonraker-address=http://moonraker.default
         ports:
         - name: http
           containerPort: 80
         - name: metrics
           containerPort: 9090
         volumeMounts:
-        - name: cookies
-          mountPath: /etc/cookies
-          readOnly: true
         - name: config
           mountPath: /etc/config
           readOnly: true
@@ -58,15 +46,7 @@ spec:
         # Make sub use the Pub/Sub emulator running in the fakepubsub service.
         - name: PUBSUB_EMULATOR_HOST
           value: fakepubsub.default:80
-        # When cloning from an inrepoconfig repo, don't bother verifying certs.
-        # This allows us to use "https://..." addresses to fakegitserver.
-        - name: GIT_SSL_NO_VERIFY
-          value: "1"
       volumes:
-      - name: cookies
-        secret:
-          defaultMode: 420
-          secretName: http-cookiefile
       - name: config
         configMap:
           name: config
