moonraker: promote client timeout to central config
Instead of hardcoding the client-side timeout into each binary that
needs to use Moonraker, put it into the main config. This way we don't
need to restart the services to pick up changes to this setting (it will
be auto-mounted already into the Config via the Config Agent, which
listens to the ConfigMap for the main config).

--- a/prow/config/prow-config-documented.yaml
+++ b/prow/config/prow-config-documented.yaml
@@ -534,6 +534,11 @@ managed_webhooks:
         "":
             token_created_after: "0001-01-01T00:00:00Z"
     respect_legacy_global_token: false
+# Moonraker contains configurations for Moonraker, such as the client
+# timeout to use for all Prow services that need to send requests to
+# Moonraker.
+moonraker:
+    client_timeout: 0s
 # OwnersDirDenylist is used to configure regular expressions matching directories
 # to ignore when searching for OWNERS{,_ALIAS} files in a repo.
 owners_dir_denylist:
