--- a/prow/test/integration/config/prow/config.yaml
+++ b/prow/test/integration/config/prow/config.yaml
@@ -65,6 +65,7 @@ in_repo_config:
    "fakegitserver.default/repo/repo3": true
    "fakegitserver.default/repo/org1/repo4": true
    "fakegitserver.default/repo/org1/repo5": true
+   "fakegitserver.default/repo/org1/repo6": true
    "fakegitserver.default/repo/some/org/gangway-test-repo-1": true
    "fakegitserver.default/repo/moonraker-burst": true
 
