--- a/prow/config/prow-config-documented.yaml
+++ b/prow/config/prow-config-documented.yaml
@@ -426,6 +426,10 @@ deck:
 # DefaultJobTimeout this is default deadline for prow jobs. This value is used when
 # no timeout is configured at the job level. This value is set to 24 hours.
 default_job_timeout: 0s
+# DisabledClusters holds a list of disabled build cluster names. The same context names will be ignored while
+# Prow components load the kubeconfig files.
+disabled_clusters:
+    - ""
 # Gangway contains configurations needed by the the Prow API server of the
 # same name. It encodes an allowlist of API clients and what kinds of Prow
 # Jobs they are authorized to trigger.
