integration test: mount git-gc configuration example
Git runs `git-gc` automatically (see the manpage for it). By default
only unreachable objects older than 2 weeks are pruned. Use a default of
1 day.

This was tested by exec-ing into the moonraker integration test
container and running

    git config --get gc.pruneexpire

which gave a result of

    1.day.ago

Having this configuration will serve as a good example of how to set
this up for production Prow installations.

--- a/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
+++ b/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
@@ -54,6 +54,9 @@ spec:
         - name: job-config
           mountPath: /etc/job-config
           readOnly: true
+        - name: git-config-system
+          mountPath: /etc/git-config-system
+          readOnly: true
         livenessProbe:
           httpGet:
             path: /healthz
@@ -72,6 +75,8 @@ spec:
         # This allows us to use "https://..." addresses to fakegitserver.
         - name: GIT_SSL_NO_VERIFY
           value: "1"
+        - name: GIT_CONFIG_SYSTEM
+          value: /etc/git-config-system/config
       volumes:
       - name: cookies
         secret:
@@ -83,3 +88,6 @@ spec:
       - name: job-config
         configMap:
           name: job-config
+      - name: git-config-system
+        configMap:
+          name: git-config-system
