--- a/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
+++ b/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
@@ -56,6 +56,9 @@ spec:
         - name: job-config
           mountPath: /etc/job-config
           readOnly: true
+        - name: git-config-system
+          mountPath: /etc/git-config-system
+          readOnly: true
         livenessProbe:
           httpGet:
             path: /healthz
@@ -74,6 +77,8 @@ spec:
         # This allows us to use "https://..." addresses to fakegitserver.
         - name: GIT_SSL_NO_VERIFY
           value: "1"
+        - name: GIT_CONFIG_SYSTEM
+          value: /etc/git-config-system/config
       volumes:
       - name: cookies
         secret:
@@ -85,3 +90,6 @@ spec:
       - name: job-config
         configMap:
           name: job-config
+      - name: git-config-system
+        configMap:
+          name: git-config-system
