inrepoconfig: add integration test to check for advancing the base branch
This adds a new integration test case for Moonraker. It first makes
Moonraker retrieve the repo with master pointing to a particular commit.
Then it makes a Moonraker client call with the "Refs.BaseRef" populated
to a non-empty string, with the expectation that Moonraker will advance
the branch on its end (because Refs.BaseRef is now not empty). Most of
the code is based on the existing TestMoonrakerBurst test case.

--- a/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
+++ b/prow/test/integration/config/prow/cluster/moonraker_deployment.yaml
@@ -29,6 +29,8 @@ spec:
         args:
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
+        # Use a static, predictable folder for storing primary clones.
+        - --cache-dir-base=/etc/moonraker-inrepoconfig-pv
         # This cookie file is only here to trigger the creation of a
         # Gerrit-flavored Git client factory. So this makes this moonraker deployment
         # "tied" to Gerrit.
