--- a/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
+++ b/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
@@ -29312,6 +29312,18 @@ spec:
                 description: ProwJobDefault holds configuration options provided as
                   defaults in the Prow config
                 properties:
+                  resultstore_config:
+                    description: ResultStoreConfig specifies parameters for uploading
+                      results to the ResultStore service.
+                    properties:
+                      project_id:
+                        description: ProjectID specifies the ResultStore InvocationAttributes.ProjectID,
+                          used for various quota and GUI access control purposes.
+                          In practice, it is generally the same as the Google Cloud
+                          Project ID or number of the job's GCS storage bucket. Required
+                          to upload results to ResultStore.
+                        type: string
+                    type: object
                   tenant_id:
                     type: string
                 type: object
@@ -29413,6 +29425,20 @@ spec:
               reporter_config:
                 description: ReporterConfig holds reporter-specific configuration
                 properties:
+                  resultstore:
+                    description: 'TODO: This config was used for alpha testing and
+                      is now replaced by ProwJobDefault.ResultStoreConfig. Use that
+                      instead. This is retained for fallback until existing configs
+                      are updated.'
+                    properties:
+                      project_id:
+                        description: Specifies the ResultStore InvocationAttributes.ProjectId,
+                          used for various quota and GUI access control purposes.
+                          In practice, it is generally the same as the Google Cloud
+                          Project ID or number of the job's GCS storage bucket. Required
+                          to write job results to ResultStore.
+                        type: string
+                    type: object
                   slack:
                     properties:
                       channel:
