--- a/prow/plugins/plugin-config-documented.yaml
+++ b/prow/plugins/plugin-config-documented.yaml
@@ -20,8 +20,8 @@ approve:
       # Repos is either of the form org/repos or just org.
       repos:
         - ""
-      # RequireSelfApproval requires PR authors to explicitly approve their PRs.
-      # Otherwise the plugin assumes the author of the PR approves the changes in the PR.
+      # RequireSelfApproval disables automatic approval from PR authors with approval rights.
+      # Otherwise the plugin assumes the author of the PR with approval rights approves the changes in the PR.
       require_self_approval: false
 blockades:
     - # BlockRegexps are regular expressions matching the file paths to block.
@@ -67,12 +67,11 @@ branch_cleaner:
     # format:
     # ```
     # preserved_branches:
-    # <org>: ["master", "release", "release-*"]
-    # <org/repo>: ["master", "release", "release-*"]
+    # <org>: ["master", "release"]
+    # <org/repo>: ["master", "release"]
     # ```
-    # Branches in this allow map would be exempt from branch gc
-    # even if the branches are already merged into the target branch.
-    # Supports regex.
+    # branches in this allow map would be exempt from branch gc
+    # even if the branches are already merged into the target branch
     preserved_branches:
         "": null
 bugzilla:
