--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "WORKSPACE": "NB: set frozen_lockfile = False"
   },
   "devDependencies": {
-    "@bazel/bazelisk": "^1.5.0",
+    "@bazel/bazelisk": "1.19.0",
     "@bazel/jasmine": "3.1.0",
-    "@bazel/rollup": "^3.1.0",
-    "@bazel/terser": "^3.1.0",
-    "@bazel/typescript": "^3.1.0",
+    "@bazel/rollup": "3.8.0",
+    "@bazel/terser": "3.8.0",
+    "@bazel/typescript": "3.8.0",
     "@rollup/plugin-commonjs": "14.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "8.4.0",
-    "@types/color": "^3.0.0",
+    "@types/color": "3.0.6",
     "@types/google.visualization": "^0.0.43",
     "@types/gtag.js": "^0.0.0",
-    "@types/jasmine": "~3.3.13",
-    "@types/pako": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-plugin-jsdoc": "^48.0.0",
+    "@types/jasmine": "3.3.16",
+    "@types/pako": "1.0.7",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-jsdoc": "48.2.6",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "jasmine": "~3.4.0",
+    "jasmine": "3.4.0",
     "rollup": "2.77.2",
     "rollup-plugin-amd": "4.0.0",
     "rollup-plugin-terser": "5.1.3",
     "terser": "5.14.2",
-    "typescript": "^3.7.5"
+    "typescript": "3.9.10"
   }
 }
