--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
 base = "site/"
 publish = "public/"
 command = "make netlify-build"
-ignore = "false"
+ignore = "git diff --quiet $CACHED_COMMIT_REF $COMMIT_REF site"
 
 [build.environment]
 HUGO_VERSION = "0.91.2"
