(spyglass/lenses) allow configuration sandbox permissions
This provides the ability to configure iframe sandbox permissions pr lense.
This allows the operator of the prow installation to define which permissions
it trust to each lense.

PR comes from the ideas and discussions in
https://github.com/kubernetes-sigs/prow/pull/294

Signed-off-by: Roy Sindre Norangshol <norrs@cisco.com>

--- a/cmd/checkconfig/testdata/combined.yaml
+++ b/cmd/checkconfig/testdata/combined.yaml
@@ -23,6 +23,10 @@ deck:
           - (FAIL|Failure \[)\b
           - panic\b
           - ^E\d{4} \d\d:\d\d:\d\d\.\d\d\d]
+          iframe_sandbox_permissions:
+          - allow-scripts
+          - allow-popups
+          - allow-popups-to-escape-sandbox
       required_files:
       - build-log.txt
     - lens:
