--- a/pkg/config/prow-config-documented.yaml
+++ b/pkg/config/prow-config-documented.yaml
@@ -720,6 +720,7 @@ plank:
                 clonerefs:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -727,6 +728,7 @@ plank:
                 initupload:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -734,6 +736,7 @@ plank:
                 place_entrypoint:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -741,6 +744,7 @@ plank:
                 sidecar:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1073,6 +1077,7 @@ plank:
                 clonerefs:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1080,6 +1085,7 @@ plank:
                 initupload:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1087,6 +1093,7 @@ plank:
                 place_entrypoint:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1094,6 +1101,7 @@ plank:
                 sidecar:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
