--- a/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
+++ b/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
@@ -55,7 +55,7 @@ spec:
         - --github-token-path=/etc/github/oauth
         - --github-endpoint=http://fakeghserver
         - --github-oauth-config-file=/etc/githuboauth/secret
-        - --cookie-secret=/etc/cookie/secret
+        - --allow-insecure
         - --plugin-config=/etc/plugins/plugins.yaml
         env:
         # Use KUBECONFIG envvar rather than --kubeconfig flag in order to provide multiple configs to merge.
@@ -64,9 +64,6 @@ spec:
         volumeMounts:
         - name: oauth-config
           mountPath: /etc/githuboauth
-          readOnly: true
-        - name: cookie-secret
-          mountPath: /etc/cookie
           readOnly: true
         - mountPath: /etc/kubeconfig
           name: kubeconfig
@@ -103,9 +100,6 @@ spec:
       - name: oauth-token
         secret:
           secretName: oauth-token
-      - name: cookie-secret
-        secret:
-          secretName: cookie
       - name: kubeconfig
         secret:
           defaultMode: 420
