testing without oauth-url

--- a/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
+++ b/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
@@ -46,11 +46,11 @@ spec:
         args:
         - --tide-url=http://tide/
         - --hook-url=http://hook:8888/plugin-help
-        - --oauth-url=/github-login
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
         - --spyglass=true
         - --tenant-id=tester
+        - --rerun-creates-job
         - --github-token-path=/etc/github/oauth
         - --github-endpoint=http://fakeghserver
         - --github-oauth-config-file=/etc/githuboauth/secret
