--- a/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
+++ b/test/integration/config/prow/cluster/deck_tenant_deployment.yaml
@@ -46,7 +46,6 @@ spec:
         args:
         - --tide-url=http://tide/
         - --hook-url=http://hook:8888/plugin-help
-        - --oauth-url=/github-login
         - --config-path=/etc/config/config.yaml
         - --job-config-path=/etc/job-config
         - --spyglass=true
@@ -55,7 +54,7 @@ spec:
         - --github-token-path=/etc/github/oauth
         - --github-endpoint=http://fakeghserver
         - --github-oauth-config-file=/etc/githuboauth/secret
-        - --cookie-secret=/etc/cookie/secret
+        - --allow-insecure
         - --plugin-config=/etc/plugins/plugins.yaml
         env:
         # Use KUBECONFIG envvar rather than --kubeconfig flag in order to provide multiple configs to merge.
@@ -64,9 +63,6 @@ spec:
         volumeMounts:
         - name: oauth-config
           mountPath: /etc/githuboauth
-          readOnly: true
-        - name: cookie-secret
-          mountPath: /etc/cookie
           readOnly: true
         - mountPath: /etc/kubeconfig
           name: kubeconfig
@@ -103,9 +99,6 @@ spec:
       - name: oauth-token
         secret:
           secretName: oauth-token
-      - name: cookie-secret
-        secret:
-          secretName: cookie
       - name: kubeconfig
         secret:
           defaultMode: 420
