--- a/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
+++ b/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
@@ -9641,15 +9641,16 @@ spec:
                           type: string
                         type: array
                       report:
-                        description: 'Report is derived from JobStatesToReport, it''s
-                          used for differentiating nil from empty slice, as yaml roundtrip
-                          by design can''t tell the difference when omitempty is supplied.
-                          See https://github.com/kubernetes/test-infra/pull/24168
-                          for details Priority-wise, it goes by following order: -
-                          `report: true/false`` in job config - `JobStatesToReport:
-                          <anything including empty slice>` in job config - `report:
-                          true/false`` in global config - `JobStatesToReport:` in
-                          global config'
+                        description: |-
+                          Report is derived from JobStatesToReport, it's used for differentiating
+                          nil from empty slice, as yaml roundtrip by design can't tell the
+                          difference when omitempty is supplied.
+                          See https://github.com/kubernetes/test-infra/pull/24168 for details
+                          Priority-wise, it goes by following order:
+                          - `report: true/false`` in job config
+                          - `JobStatesToReport: <anything including empty slice>` in job config
+                          - `report: true/false`` in global config
+                          - `JobStatesToReport:` in global config
                         type: boolean
                       report_template:
                         type: string
