Consolidate revival logic in case pod is in an unknown, evicted or unreachable state. Limit the number of revivals to 3.
Signed-off-by: Tim Ramlot <42113979+inteon@users.noreply.github.com>

--- a/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
+++ b/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
@@ -9788,6 +9788,10 @@ spec:
                   PrevReportStates stores the previous reported prowjob state per reporter
                   So crier won't make duplicated report attempt
                 type: object
+              revivalCount:
+                description: Amount of times the Pod was revived from an unexpected
+                  stop.
+                type: integer
               startTime:
                 description: StartTime is equal to the creation time of the ProwJob
                 format: date-time
