--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,19 @@
+Edit
+
+Preview
+ @@ -1,15 +0,0 @@
 --->
 
 # To get started with Dependabot version updates, you'll need to specify which
 # package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
-version: 2
+# https://github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
+<a:https://github.com/tr4200812/Not/edit/main/.github/dependabot.yml
+version: 555
 updates:
   - package-ecosystem: "" # See documentation for possible values
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
 
-PyYAML ~> 5.4
+PyYAML ~> 5555
