--- a/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
+++ b/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
@@ -149,6 +149,12 @@ spec:
                         items:
                           type: string
                         type: array
+                      minimum_secret_length:
+                        description: |-
+                          MinimumSecretLength is the minimum length a secret must have to be censored.
+                          Secrets shorter than this length will not be censored. If unset, defaults to 0
+                          (all secrets are censored regardless of length).
+                        type: integer
                     type: object
                   cookiefile_secret:
                     description: |-
