--- a/pkg/config/prow-config-documented.yaml
+++ b/pkg/config/prow-config-documented.yaml
@@ -732,6 +732,7 @@ plank:
                 clonerefs:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -739,6 +740,7 @@ plank:
                 initupload:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -746,6 +748,7 @@ plank:
                 place_entrypoint:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -753,6 +756,7 @@ plank:
                 sidecar:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1089,6 +1093,7 @@ plank:
                 clonerefs:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1096,6 +1101,7 @@ plank:
                 initupload:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1103,6 +1109,7 @@ plank:
                 place_entrypoint:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
@@ -1110,6 +1117,7 @@ plank:
                 sidecar:
                     claims:
                         - name: ' '
+                          request: ' '
                     limits:
                         "": "0"
                     requests:
